Integrated scope and panoramic fft indicators. Initial, needs refining.

--- a/pelengator/Makefile
+++ b/pelengator/Makefile
@@ -5,8 +5,8 @@ VISA_LIB_PATH = /cygdrive/c/Program\ Files/IVI\ Foundation/VISA/Win64/Lib_x64/ms
 
 # Compiler and flags
 CC = gcc
-CFLAGS = -Wall -Wextra -g -I$(VISA_INC_PATH)
-LDFLAGS = -L$(VISA_LIB_PATH) -lvisa64
+CFLAGS = -Wall -Wextra  -pedantic -std=gnu99 -O2 -g -I$(VISA_INC_PATH)
+LDFLAGS = -L$(VISA_LIB_PATH) -lvisa64 -lm -lX11
 
 # Executable name
 TARGET = pelengator.exe
